challenge_3/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  type: LoadBalancer
  ports:
    - nodePort: 30001
      port: 8000
  selector:
    tag: pythonapp
